# Huffman-1

./: CMakeLists.txt  bitVector.c  bitVector.h  eng.txt  frequencyCounter.c  frequencyCounter.h  hash_table.c  hash_table.h  header.h  helpful.c  helpful.h  helpful_function.c  helpful_function.h  main  main.c  main_huffman.c  maptree.c  maptree.h  marcio.huff  marcio.txt  priorityQueue.c  priorityQueue.h  rebuildTree  rebuildTree.c  rebuildTree.h  saida.huff  size_hash_size_tree.c  size_hash_size_tree.h  stringList.c  stringList.h
string/: stringList.c
